# engineering-knowledge

./: .gitignore  README.md
.git-rewrite/: backup-refs  commit  index  message  parse  revs
AWS-ApplicationLoadBalancer-Terraform/: .gitignore  README.md  build_and_push.sh
DevOpsDeveloperTools/: projeto-multi-stage-builds.csproj
Entity-Framework-Core-Advanced/: .gitignore  DominandoEFCore.csproj  README.md  log.txt
FlashCardPlus/: README.md
IdentityMVC-ASP.NET-Core/: docker-compose.yml
MetricFlow/: .dockerignore  README.md  requirements.txt
Minibudget/: Dockerfile  OVERVIEW.md  app.py  db.py  docker-compose.yml  main.py  pyproject.toml  schema.sql
MyWorkflowCLI/: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.py
MyWorkflowCLI/docs/: commands.md  llm.md  suggestions.md  todo.md
MyWorkflowCLI/src/: main.py
MyWorkflowCLI/src/commands/: help_command.py
MyWorkflowCLI/src/utils/: command_factory.py
RabbitMQ-CSharp/: .gitignore  ManagerRabbitmq.sln
Terraform/: README.md
Web-scraping/: .gitignore  package.json
Windows-Server__container/: OTEL_INSTALL_WIN2012R2.md  README.md  config_test_basic.yaml  config_with_add_operator.yaml  config_with_move_operator.yaml  docker-compose.yaml
ai-engineer/: 2026-01-29-aula-02 Técnicas e boas práticas de Prompting 2.md  learning-log.md  pyrightconfig.json
aiEngineer/: README.md
all-hands-k3s/: README.md  app.py  app.yaml
awsApplicationLoadBalancerTerraform/: lb_ec2_api.sln
basicAuthWebApi/: BasicAuthenticationWEBAPI.sln
bulletJournalHelio/: pom.xml
cli-alertmanager/: .cz.toml  .dockerignore  CLAUDE.md  requirements.txt
cliAlertmanager/: .env_example  .gitignore  HISTORY.rst  Makefile  README.rst  setup.py
cog-card-console/: .gitignore  README.md  docker-compose.yaml  main.py  main_v1.py  requirements.txt
cogCardConsole/: flashcards.json
commitsDocumentadosAtomicos/: package.json
devOpsDeveloperTools/: Dockerfile  README.md  projeto-multi-stage-builds.csproj
ecs-curso-servico1/: Dockerfile
ecsCursoServico1/: servico1.json
entityFrameworkCoreAdvanced/: EFcore.sln  Program.cs  dockerfile
estudio_madame/: GEMINI.md  (+2 more)
estudio_madame/backend/: .env.example  Dockerfile  openapi.yaml  pyproject.toml  requirements.txt  start.sh
estudio_madame/backend/app/: initial_data.py  main.py
estudio_madame/backend/app/api/v1/endpoints/: auth.py  client_controller.py  dashboard_controller.py
estudio_madame/backend/app/core/: config.py
estudio_madame/backend/app/models/: approval.py  user.py
estudio_madame/backend/app/schemas/: client.py  gallery.py  user.py
estudio_madame/backend/app/services/: base.py  client.py  dashboard.py  gallery.py
estudio_madame/backend/tests/unit/: test_clients.py
glpi_cli/: .env.example  INSTALL.md  pyproject.toml
glpi_cli/.claude/: commit.config.json
glpi_cli/docs/llm-guide/: 02-COMMAND-REFERENCE.md  03-EXAMPLES-REAL-WORLD.md  QUICK-START.md
glpi_cli/glpi_cli/: client.py  utils.py
jupyter/sales-forecast/: README.md  main.py  pyproject.toml
jupyter/sales-forecast/src/sales_forecast/: features.py
jupyter/sales-forecast/tests/: test_features.py
(+629 files in other folders)
